--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <img src="img/Bio1Bio2.png"></img>
+            <img src="img/Bio1Bio2.png"/>
           </div>
           <div class="col-md-6">
             <h6>Drug indices</h6>
