--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               Through our EEG analysis pipeline we comprehensively map and select neurophysiological biomarkers in the spectral, temporal, and spatial domain to quantify changes in continuous EEG recordings.
             </p>
             <ol class="refs">
-              <li><a href="http://journal.frontiersin.org/article/10.3389/neuro.02.002.2008/full">Eichler and Meier, 2008</a></li>
+              <li><a href="http://journal.frontiersin.org/article/10.3389/neuro.02.002.2008/full" target=_blank>Eichler and Meier, 2008</a></li>
               <li>Montez et al., 2009</li>
               <li>Poil et al., 2011</li>
               <li>Poil et al., 2012</li>
