--- a/index.html
+++ b/index.html
@@ -217,6 +217,8 @@
               1098XH Amsterdam</br>
               The Netherlands</br>
             </address>
+            <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=poilss" async="async"></script>
+            <div class="addthis_horizontal_follow_toolbox">
           </div>
           <div class="col-md-3">
             <h6>NBT Analytics</h6>
