--- a/index.html
+++ b/index.html
@@ -196,6 +196,14 @@
                 <div class="bg">...</div>
               </div>
             </div>
+            <div class="person">
+              <img src="img/head-thumbs-x.png"/>
+              <div class="profile">
+                <div class="name">Simon Houtman</div>
+                <div class="position">Developer</div>
+                <div class="bg">...</div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
