--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <img height="60" width="102" src="img/logo.png"/>
+            <img class="img-responsive" src="img/logo.png"/>
             <h1 class="title">
               Better understand how drugs influence brain activity through state-of-the-art EEG analysis
             </h1>
@@ -125,7 +125,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <img src="img/Bio1Bio2.png"/>
+            <img class="img-responsive" src="img/Bio1Bio2.png"/>
           </div>
           <div class="col-md-6">
             <h6>Drug indices</h6>
