--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             <p class="h1-title-sub">
               NBT Analytics provides valuable insights for CNS drug development and clinical trials
             </p>
+            <p><a class="btn btn-primary btn-lg" href="#services" role="button">Learn more</a></p>
           </div>
         </div>
       </div>
