--- a/index.html
+++ b/index.html
@@ -217,8 +217,6 @@
             <p>
               E-mail: info@nbt-analytics.com </br>
               Call: +31 (0) 20 xxx xxxx
-            <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=poilss" async="async"></script>
-            <div class="addthis_horizontal_follow_toolbox"></div>
             </p>
           </div>
           <div class="col-md-3">
@@ -239,6 +237,11 @@
               <li><a href="#about">About us</a></li>
               <li><a href="#contact">Contact</a></li>
             </ul>
+          </div>
+          <div class="col-md-3">
+             <img class="img-responsive" src="img/logosmall.png"/>
+            <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=poilss" async="async"></script>
+            <div class="addthis_horizontal_follow_toolbox"></div>
           </div>
         </div>
       </div>
