--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
     <title>EEG analysis for CNS drug development and clinical trials | NBT Analytics</title>
     <META NAME="Description" CONTENT="We provide EEG analysis services for clinical trials">
     <meta property="fb:admins" content="710920251" />
-
-
-
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -38,7 +35,6 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">NBT Analytics</a>
         </div>
 
         <div class="collapse navbar-collapse" id="navbar-collapse">
@@ -50,7 +46,6 @@
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
-
       </div>
     </nav>
 
@@ -60,7 +55,7 @@
           <div class="col-md-6">
             <img class="img-responsive" src="img/logo.png"/>
             <h1 class="title">
-              Better understand how drugs influence brain activity through state-of-the-art EEG analysis
+              Understand better how drugs influence brain activity through state-of-the-art EEG analysis
             </h1>
             <p class="h1-title-sub">
               NBT Analytics provides valuable insights for CNS drug development and clinical trials
@@ -76,19 +71,20 @@
         <div class="row">
           <div class="col-md-6">
             <ul>
-              <li>EEG consultancy</li>
-              <li>pre-processing and cleaning of EEG signals</li>
-              <li>mapping of EEG biomarkers</li>
-              <li>identification of drug specific indices</li>
+              <li>EEG consultancy on protocol design etc.</li>
+              <li>Pre-processing, visual inspection, and cleaning of EEG signals</li>
+              <li>Comprehensive mapping of EEG biomarkers (spectral, temporal, and spatial)</li>
+              <li>Identification of highly sensitive indices of specific drug interventions</li>
             </ul>
           </div>
           <div class="col-md-6">
             <h6>Our services</h6>
             <h2>
-              Detailed quantifications of drug-induced neuro-physiological changes in brain activity.
+              Comprehensive mapping of drug-induced neurophysiological changes in brain activity.
             </h2>
             <p>
-              Our services are based on the latest developments in machine-learning and big data analytics. Using an advanced data pipeline we pre-process and clean EEG data, comprehensively map biomarkers in the spectral, temporal and spatial domain, and we identify highly sensitive indices unique to specific drug interventions.
+              NBT Analytics delivers valuable insights for CNS drug development and clinical trials through state-of-the-art EEG analysis.
+              Our services are based on an EEG analysis pipeline developed at the VU University Amsterdam, which provides a comprehensive selection of neurophysiological biomarkers and use machine-learning algorithms to identify highly sensitive indices of drug-induced changes in brain activity.
             </p>
           </div>
         </div>
