--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
         <div class="row">
           <div class="col-md-6">
             <ul>
-              <li>EEG consultancy on protocol design etc.</li>
-              <li>Pre-processing, visual inspection, and cleaning of EEG signals</li>
-              <li>Comprehensive mapping of EEG biomarkers (spectral, temporal, and spatial)</li>
-              <li>Identification of highly sensitive indices of specific drug interventions</li>
+              <li>EEG consultancy.</li>
+              <li>Pre-processing and cleaning of EEG signals</li>
+              <li>Comprehensive mapping of EEG biomarkers</li>
+              <li>Identification of drug specific indices</li>
             </ul>
           </div>
           <div class="col-md-6">
@@ -83,7 +83,9 @@
               Comprehensive mapping of drug-induced neurophysiological changes in brain activity.
             </h2>
             <p>
-              NBT Analytics delivers valuable insights for CNS drug development and clinical trials through state-of-the-art EEG analysis.
+            NBT Analytics delivers valuable insights for CNS drug development and clinical trials through state-of-the-art electroencephalography (EEG) analysis. 
+            </p>
+            <p>
               Our services are based on an EEG analysis pipeline developed at the VU University Amsterdam, which provides a comprehensive selection of neurophysiological biomarkers and use machine-learning algorithms to identify highly sensitive indices of drug-induced changes in brain activity.
             </p>
           </div>
