--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
           <div class="col-md-6">
             <img class="img-responsive" src="img/logo.png"/>
             <h1 class="title">
-              Understand better how drugs influence brain activity through state-of-the-art EEG analysis
+              Understand better how drugs influence brain activity through state-of-the-art EEG analysis.
             </h1>
             <p class="h1-title-sub">
-              NBT Analytics provides valuable insights for CNS drug development and clinical trials
+              NBT Analytics provides valuable insights for CNS drug development and clinical trials.
             </p>
             <p><a class="btn btn-primary btn-lg"  href="#services" role="button">Learn more</a></p>
           </div>
@@ -80,6 +80,26 @@
             <p>
               Our services are based on an EEG analysis pipeline developed at the VU University Amsterdam, which provides a comprehensive selection of neurophysiological biomarkers and use machine-learning algorithms to identify highly sensitive indices of drug-induced changes in brain activity.
             </p>
+            <p><!-- Begin MailChimp Signup Form -->
+              <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+              <style type="text/css">
+	            #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+	            /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+	             We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+              </style>
+              <div id="mc_embed_signup">
+                <form action="//nbt-analytics.us7.list-manage.com/subscribe/post?u=b8862a40c7a5a6894f835c708&amp;id=5aaf60427f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                  <div id="mc_embed_signup_scroll">
+	                  <label for="mce-EMAIL">Request more information:</label>
+	                  <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_b8862a40c7a5a6894f835c708_5aaf60427f" tabindex="-1" value=""></div>
+                    <div class="clear"><input type="submit" value="Subscribe" name="Submit" id="mc-embedded-subscribe" class="button"></div>
+                  </div>
+              </form>
+            </div>
+          <!--End mc_embed_signup-->
+          </p>
           </div>
            <div class="col-md-6">
             <ul>
