--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 	                  <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
                      <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                      <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_b8862a40c7a5a6894f835c708_5aaf60427f" tabindex="-1" value=""></div>
-                    <div class="clear"><input type="submit" value="Subscribe" name="Submit" id="mc-embedded-subscribe" class="button"></div>
+                    <div class="clear"><input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
                   </div>
               </form>
             </div>
