--- a/index.html
+++ b/index.html
@@ -80,7 +80,16 @@
             <p>
               Our services are based on an EEG analysis pipeline developed at the VU University Amsterdam, which provides a comprehensive selection of neurophysiological biomarkers and use machine-learning algorithms to identify highly sensitive indices of drug-induced changes in brain activity.
             </p>
-            <p><!-- Begin MailChimp Signup Form -->
+          </div>
+           <div class="col-md-6">
+            <ul>
+              <li>EEG consultancy.</li>
+              <li>Pre-processing and cleaning of EEG signals</li>
+              <li>Comprehensive mapping of EEG biomarkers</li>
+              <li>Identification of drug specific indices</li>
+            </ul>
+            <p>
+            	<!-- Begin MailChimp Signup Form -->
               <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
               <style type="text/css">
 	            #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
@@ -100,14 +109,6 @@
             </div>
           <!--End mc_embed_signup-->
           </p>
-          </div>
-           <div class="col-md-6">
-            <ul>
-              <li>EEG consultancy.</li>
-              <li>Pre-processing and cleaning of EEG signals</li>
-              <li>Comprehensive mapping of EEG biomarkers</li>
-              <li>Identification of drug specific indices</li>
-            </ul>
           </div>
         </div>
       </div>
