--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
             NBT Analytics delivers valuable insights for CNS drug development and clinical trials through state-of-the-art electroencephalography (EEG) analysis. 
             </p>
             <p>
-              Our services are based on an EEG analysis pipeline developed at the VU University Amsterdam, which provides a comprehensive selection of neurophysiological biomarkers and use machine-learning algorithms to identify highly sensitive indices of drug-induced changes in brain activity.
+              Our services are based on an EEG analysis pipeline developed at the VU University Amsterdam, which provides a comprehensive selection of neurophysiological biomarkers and use machine-learning algorithms to identify highly sensitive indices of drug-induced changes in brain activity. 
+            </p>
+            We can improve your clinical trials. Want to learn more? Contact us at <a href="mailto:info@nbt-analytics.com">info@nbt-analytics.com</a>
             </p>
           </div>
            <div class="col-md-6">
@@ -88,7 +90,6 @@
               <li>Comprehensive mapping of EEG biomarkers</li>
               <li>Identification of drug specific indices</li>
             </ul>
-            <p><a href="#biomarkers">Read more below</a></p>
             <p>
             <!-- Begin MailChimp Signup Form -->
 		<link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
