--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <p>
               Our services are based on an EEG analysis pipeline developed at the VU University Amsterdam, which provides a comprehensive selection of neurophysiological biomarkers and use machine-learning algorithms to identify highly sensitive indices of drug-induced changes in brain activity. 
             </p>
-            We can improve your clinical trials. Want to learn more? Contact us at <a href="mailto:info@nbt-analytics.com">info@nbt-analytics.com</a>
+            We can improve your clinical trials. Want to learn more? <br> Contact us at <a href="mailto:info@nbt-analytics.com">info@nbt-analytics.com</a>
             </p>
           </div>
            <div class="col-md-6">
@@ -90,27 +90,6 @@
               <li>Comprehensive mapping of EEG biomarkers</li>
               <li>Identification of drug specific indices</li>
             </ul>
-            <p>
-            <!-- Begin MailChimp Signup Form -->
-		<link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
-		<style type="text/css">
-		#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-		/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-		 We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-		</style>
-		<div id="mc_embed_signup">
-		<form action="//nbt-analytics.us7.list-manage.com/subscribe/post?u=b8862a40c7a5a6894f835c708&amp;id=be87e0e44a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    			<div id="mc_embed_signup_scroll">
-				<label for="mce-EMAIL">Subscribe to our mailing list</label>
-				<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-    				<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    				<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_b8862a40c7a5a6894f835c708_be87e0e44a" tabindex="-1" value=""></div>
-    				<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-    			</div>
-		</form>
-		</div>
-		<!--End mc_embed_signup-->
-          </p>
           </div>
         </div>
       </div>
