layout change "the Science"

--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
         <div class="collapse navbar-collapse" id="navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#services">Our services</a></li>
-            <li><a href="#biomarkers">EEG biomarkers</a></li>
-            <li><a href="#indices">Drug indices</a></li>
+            <li><a href="#biomarkers">The Science</a></li>
             <li><a href="#about">About us</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -82,6 +81,9 @@
             </p>
             We can improve your clinical trials. Want to learn more? <br> Contact us at <a href="mailto:info@nbt-analytics.com">info@nbt-analytics.com</a>
             </p>
+            <p>
+             <a href="#biomarkers"> Read more about  the science behind our services below </a>
+            </p>
           </div>
            <div class="col-md-6">
             <ul>
@@ -120,12 +122,7 @@
             </ol>
           </div>
         </div>
-      </div>
-    </div>
-
-    <div id="indices">
-      <div class="container">
-        <div class="row">
+                <div class="row">
           <div class="col-md-6">
             <h6>Drug indices</h6>
             <h2>Beyond single biomarkers</h2>
@@ -149,6 +146,10 @@
         </div>
       </div>
     </div>
+
+
+
+
 
     <div id="about">
       <div class="container">
