--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
             </ol>
           </div>
         </div>
-                <div class="row">
+        </div>
+        <div class="container">
+        <div class="row">
           <div class="col-md-6">
             <h6>Drug indices</h6>
             <h2>Beyond single biomarkers</h2>
