--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
             </p>
             We can improve your clinical trials. Want to learn more? <br> Contact us at <a href="mailto:info@nbt-analytics.com">info@nbt-analytics.com</a>
             </p>
+            <p>
+             Read more below about the science behind our services
+            </p>
           </div>
            <div class="col-md-6">
             <ul>
