--- a/index.html
+++ b/index.html
@@ -82,9 +82,6 @@
             </p>
             We can improve your clinical trials. Want to learn more? <br> Contact us at <a href="mailto:info@nbt-analytics.com">info@nbt-analytics.com</a>
             </p>
-            <p>
-             Read more below about the science behind our services
-            </p>
           </div>
            <div class="col-md-6">
             <ul>
@@ -93,6 +90,9 @@
               <li>Comprehensive mapping of EEG biomarkers</li>
               <li>Identification of drug specific indices</li>
             </ul>
+            <p>
+             Read more about the science behind our services below.
+            </p>
           </div>
         </div>
       </div>
