--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
           <div class="col-md-6">
             <img class="img-responsive" src="img/logo.png"/>
             <h1 class="title">
-              Understand better how drugs influence brain activity through state-of-the-art EEG analysis.
+              Understand brain activity better.
             </h1>
             <p class="h1-title-sub">
-              NBT Analytics provides valuable insights for CNS drug development and clinical trials.
+              NBT Analytics provides pharmaceutical companies with valuable insights on how drugs influcence brain acitivity.
             </p>
             <p><a class="btn btn-primary btn-lg"  href="#services" role="button">Learn more</a></p>
           </div>
@@ -75,12 +75,12 @@
               Comprehensive mapping of drug-induced neurophysiological changes in brain activity.
             </h2>
             <p>
-            NBT Analytics delivers valuable insights for CNS drug development and clinical trials through state-of-the-art electroencephalography (EEG) analysis. 
+            NBT Analytics delivers detailed insights for CNS drug development and clinical trials through state-of-the-art electroencephalography (EEG) analysis. 
             </p>
             <p>
-              Our services are based on an EEG analysis pipeline developed at the VU University Amsterdam, which provides a comprehensive selection of neurophysiological biomarkers and use machine-learning algorithms to identify highly sensitive indices of drug-induced changes in brain activity. 
+              Our services are based on an EEG analysis pipeline developed at the VU University Amsterdam, which provides a comprehensive selection of neurophysiological biomarkers and uses machine-learning algorithms to identify highly sensitive indices of drug-induced changes in brain activity. 
             </p>
-            We can improve your clinical trials. Want to learn more? <br> Contact us at <a href="mailto:info@nbt-analytics.com">info@nbt-analytics.com</a>
+           Want to learn more? <br> Contact us at <a href="mailto:info@nbt-analytics.com">info@nbt-analytics.com</a>
             </p>
           </div>
            <div class="col-md-6">
@@ -90,9 +90,6 @@
               <li>Comprehensive mapping of EEG biomarkers</li>
               <li>Identification of drug specific indices</li>
             </ul>
-            <p>
-             Read more about the science behind our services below.
-            </p>
           </div>
         </div>
       </div>
@@ -106,15 +103,8 @@
           <div class="col-md-6">
             <h6>EEG biomarkers</h6>
             <h2>Secondary endpoints for clinical trials</h2>
-            <p>
-              The EEG measures brain activity with a high temporal resolution and is particularly sensitive to alterations in the excitatory/inhibitory balance, which is compromised in several neuropsychiatric disorders<sup>1</sup>.
-            </p>
-            <p>
-              We have developed novel biomarkers that are sensitive to modulations of the excitatory/inhibitory balance (patients, model and hippocampal slices)<sup>2,3,4</sup>. These biomarkers play an important role in understanding drug effects in humans and therefor have great potential as secondary endpoints in clinical trials.
-            </p>
-            <p>
-              Through our EEG analysis pipeline we comprehensively map and select neurophysiological biomarkers in the spectral, temporal, and spatial domain to quantify changes in continuous EEG recordings.
-            </p>
+            to be written
+
             <ol class="refs">
               <li><a href="http://journal.frontiersin.org/article/10.3389/neuro.02.002.2008/full" target=_blank>Eichler and Meier, 2008</a></li>
               <li>Montez et al., 2009</li>
