--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               Understand brain activity better.
             </h1>
             <p class="h1-title-sub">
-              NBT Analytics provides pharmaceutical companies with valuable insights on how drugs influcence brain acitivity.
+              NBT Analytics provides pharmaceutical companies with valuable insights on how drugs influcence the brain.
             </p>
             <p><a class="btn btn-primary btn-lg"  href="#services" role="button">Learn more</a></p>
           </div>
