--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             </p>
           </div>
            <div class="col-md-6">
+            <img class="img-responsive" src="img/eegtraceshort.png"/>
             <ul>
               <li>EEG consultancy.</li>
               <li>Pre-processing and cleaning of EEG signals</li>
