--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
               Comprehensive mapping of drug-induced neurophysiological changes in brain activity.
             </h2>
             <p>
-            NBT Analytics delivers detailed insights for CNS drug development and clinical trials through state-of-the-art electroencephalography (EEG) analysis. 
+              NBT Analytics delivers detailed neuroimaging insights for CNS drug development through state-of-the-art electroencephalography (EEG) analysis. 
             </p>
             <p>
-              Our services are based on an EEG analysis pipeline developed at the VU University Amsterdam, which provides a comprehensive selection of neurophysiological biomarkers and uses machine-learning algorithms to identify highly sensitive indices of drug-induced changes in brain activity. 
+              Our services for clinical trials are based on an EEG analysis pipeline developed at the VU University Amsterdam, which provides a comprehensive selection of neurophysiological biomarkers and uses machine-learning algorithms to identify highly sensitive indices of drug-induced changes in brain activity. 
             </p>
-           Want to learn more? <br> Contact us at <a href="mailto:info@nbt-analytics.com">info@nbt-analytics.com</a>
+             Want to learn more? <br> Contact us at <a href="mailto:info@nbt-analytics.com">info@nbt-analytics.com</a>
             </p>
           </div>
            <div class="col-md-6">
