--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>EEG analysis for CNS drug development and clinical trials | NBT Analytics</title>
-    <META NAME="Description" CONTENT="We provide EEG analysis services for clinical trials">
+    <META NAME="Description" CONTENT="Understand brain activity better">
     <meta property="fb:admins" content="710920251" />
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -75,7 +75,7 @@
               Comprehensive mapping of drug-induced neurophysiological changes in brain activity.
             </h2>
             <p>
-              NBT Analytics delivers detailed neuroimaging insights for CNS drug development through state-of-the-art electroencephalography (EEG) analysis. 
+              NBT Analytics provides detailed neuroimaging insights for CNS drug development through state-of-the-art electroencephalography (EEG) analysis. 
             </p>
             <p>
               Our services for clinical trials are based on an EEG analysis pipeline developed at the VU University Amsterdam, which provides a comprehensive selection of neurophysiological biomarkers and uses machine-learning algorithms to identify highly sensitive indices of drug-induced changes in brain activity. 
