--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
+            <img class="img-responsive" src="img/Montez2009.png"/>
           </div>
           <div class="col-md-6">
             <h6>EEG biomarkers</h6>
