--- a/index.html
+++ b/index.html
@@ -214,7 +214,6 @@
             <p>
               E-mail: info@nbt-analytics.com </br>
               Call: +31 (0) 20 xxx xxxx
-            <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=poilss" async="async"></script>
             <div class="addthis_horizontal_follow_toolbox"></div>
             </p>
           </div>
@@ -254,5 +253,6 @@
     <!-- NBT Analytics styling -->
     <link href="styles.css" rel="stylesheet">
     <a href=https://plus.google.com/110309870351784054922 rel=publisher></a>
+    <script defer type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=poilss" async="async"></script>
   </body>
 </html>
