--- a/index.html
+++ b/index.html
@@ -253,6 +253,6 @@
     <!-- NBT Analytics styling -->
     <link href="styles.css" rel="stylesheet">
     <a href=https://plus.google.com/110309870351784054922 rel=publisher></a>
-    <script defer type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=poilss" async="async"></script>
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=poilss" async="async"></script>
   </body>
 </html>
