--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
           </div>
           <div class="col-md-3">
              <img class="img-responsive" src="img/logosmall.png"/>
-             <i>Integrating Knowledge</i>
+             <div align="right"><i>Integrating Knowledge</i></div>
           </div>
         </div>
       </div>
