--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    
     <title>EEG analysis for CNS drug development and clinical trials | NBT Analytics</title>
     <META NAME="Description" CONTENT="Understand brain activity better">
     <meta property="fb:admins" content="710920251" />
@@ -23,6 +24,7 @@
   ga('create', 'UA-71829758-1', 'auto',{'siteSpeedSampleRate': 100});
   ga('send', 'pageview');
 </script>
+<link rel="shortcut icon" href="/lib/tpl/arctic/images/nbtfavicon.ico"/>
 <!-- end Google Analytics tag -->
   </head>
   <body>
@@ -238,7 +240,7 @@
           </div>
           <div class="col-md-3">
              <img class="img-responsive" src="img/logosmall.png"/>
-             <div align="right"><i>Integrating Knowledge</i></div>
+             <div align="center"><i>Integrating Knowledge</i></div>
           </div>
         </div>
       </div>
