--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <img class="img-responsive" src="img/logo.png"/>
+            <img class="img-responsive" src="img/logo.png"/> Intergrating Knowledge
             <h1 class="title">
               Understand brain activity better.
             </h1>
