--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <img class="img-responsive" src="img/logo.png"/> Intergrating Knowledge
+            <img class="img-responsive" src="img/logo.png"/> 
+            <div align="right">Intergrating Knowledge</div>
             <h1 class="title">
               Understand brain activity better.
             </h1>
