--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="row">
           <div class="col-md-6">
             <img class="img-responsive" src="img/logo.png"/> 
-            <div align="right">Intergrating Knowledge</div>
+            <div align="center">Intergrating Knowledge</div>
             <h1 class="title">
               Understand brain activity better.
             </h1>
