--- a/index.html
+++ b/index.html
@@ -108,8 +108,9 @@
           <div class="col-md-6">
             <h6>EEG biomarkers</h6>
             <h2>Secondary endpoints for clinical trials</h2>
-            to be written
-
+            <p> Electroencephalography (EEG) is a non-invasive, inexpensive and broadly available neuroimaging method that measures neurophysiological changes. The EEG is information rich and may give valuable insights on how a drug affects brain. EEG biomarkers, therefore, have great potential as secondary endpoints in clinical trials.</p>
+            <p>We provide analysis based on a comprehensive selection of EEG biomarkers in the temporal, spatial, and spectral domains. By mapping multiple EEG biomarkers we obtain a detailed overview of drug induced neurophysiological changes, that further can be integrated into highly sensitive indices (see below).</p>
+            <p>The EEG is particularly sensitive to alterations in the excitatory/inhibitory balance, which is compromised in several neuropsychiatric disorders <sub>1</sub>. We have developed novel biomarkers that are sensitive to modulations of the excitatory/inhibitory balance and predict an important role of these biomarkers for understanding drug effects in humans<sub>2,3,4</sub>. One of these biomarkers is the oscillation burst duration biomarker, which has shown great sensitivity to a Alzheimer’s disease <sub>2</sub>(see Figure)</p>
             <ol class="refs">
               <li><a href="http://journal.frontiersin.org/article/10.3389/neuro.02.002.2008/full" target=_blank>Eichler and Meier, 2008</a></li>
               <li>Montez et al., 2009</li>
