--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
               &ldquo;We strive to improve and accelerate CNS drug development through innovative EEG analysis.&rdquo;
             </h2>
             <p>
-              NBT Analytics B.V. is a Dutch spin-off company from the VU University Amsterdam. The company is founded in August 2015 by Dr. Klaus Linkenkaer-Hansen, Dr. Simon-Shlomo Poil, and Medrithm Holding B.V. The company is funded by VU University Amsterdam and Medrithm Holding B.V.
+              NBT Analytics B.V. is a Dutch spin-off company from the VU University Amsterdam. The company was founded in August 2015 by Dr. Klaus Linkenkaer-Hansen, Dr. Simon-Shlomo Poil, and Medrithm Holding B.V. The company is funded by VU University Amsterdam and Medrithm Holding B.V.
             </p>
             <p>
               NBT Analytics is build on the Neurophysiological Biomarker Toolbox (NBT), a research platform for M/EEG analysis developed at the VU University Amsterdam.
