--- a/index.html
+++ b/index.html
@@ -129,18 +129,15 @@
             <h6>Drug indices</h6>
             <h2>Beyond single biomarkers</h2>
             <p>
-              The EEG can be parameterized in multiple biomarkers, which complicates the assessment of drug-induced effects and leads to reduced statistical power for...
+            The EEG can be parameterized in multiple biomarkers, which complicates the assessment of drug-induced effects and leads to reduced statistical power. 
             </p>
             <p>
-              We have developed an EEG analysis pipeline which identifies the right combination of multiple biomarkers and integrates the data into an index highly sensitive to a specific intervention or patient group<sup>5</sup>.
-            </p>
-            <p>
-              The integrated index can for example be used for prognostic purposes or provide a single value quantification of drug effects for dosage studies. By combining multiple biomarkers into a single index we achieve a higher statistical power compared to a single biomarker based analysis.
+            We have developed an EEG analysis pipeline which identifies the right combination of multiple biomarkers and integrates these biomarkers into an index highly sensitive to a specific intervention or patient group<sup>5</sup>.
+            The integrated index can for example be used for prognostic purposes or provide a single value quantification of drug effects for dosage studies. By combining multiple biomarkers into a single index we achieve a higher statistical power compared to a single biomarker based analysis (see Figure, simulated data).
             </p>
             <ol start="5" class="refs">
               <li>Poil et al., 2013</li>
             </ol>
-
           </div>
           <div class="col-md-6">
             <img class="img-responsive" src="img/Bio1Bio2.png"/>
