--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
             <p>The EEG is particularly sensitive to alterations in the excitatory/inhibitory balance, which is compromised in several neuropsychiatric disorders <sup>1</sup>. We have developed novel biomarkers that are sensitive to modulations of the excitatory/inhibitory balance and predict an important role of these biomarkers for understanding drug effects in humans<sup>2,3,4</sup>. One of these biomarkers is the oscillation burst duration biomarker, which has shown great sensitivity to a Alzheimer’s disease <sup>2</sup>(see Figure)</p>
             <ol class="refs">
               <li><a href="http://journal.frontiersin.org/article/10.3389/neuro.02.002.2008/full" target=_blank>Eichler and Meier (2008). E-I balance and human diseases - from molecules to networking. Frontiers of Molecular Neuroscience 1:2. </a></li>
-              <li>Montez et al. (2009). Altered temporal correlations in parietal alpha and prefrontal theta oscillations in early-stage Alzheimer disease. PNAS, 106(5): 1614–1619</li>
-              <li>Linkenkaer-Hansen et al. (2005). Breakdown of Long-Range Temporal Correlations in Theta Oscillations in Patients with Major Depressive Disorder. Journal of Neuroscience 25(44): 10131-10137</li>
-              <li>Poil et al. (2012). Critical-State Dynamics of Avalanches and Oscillations Jointly Emerge from Balanced Excitation/Inhibition in Neuronal Networks. Journal of Neuroscience 32(29): 9817-9823</li>
+              <li><a href="http://www.pnas.org/content/106/5/1614.full" target=_blank>Montez et al. (2009). Altered temporal correlations in parietal alpha and prefrontal theta oscillations in early-stage Alzheimer disease. PNAS, 106(5): 1614–1619</a></li>
+              <li><a href="http://www.jneurosci.org/content/25/44/10131.full" target=_blank>Linkenkaer-Hansen et al. (2005). Breakdown of Long-Range Temporal Correlations in Theta Oscillations in Patients with Major Depressive Disorder. Journal of Neuroscience 25(44): 10131-10137 </a></li>
+              <li><a href="http://www.jneurosci.org/content/32/29/9817.full" target=_blank>Poil et al. (2012). Critical-State Dynamics of Avalanches and Oscillations Jointly Emerge from Balanced Excitation/Inhibition in Neuronal Networks. Journal of Neuroscience 32(29): 9817-9823</a></li>
             </ol>
           </div>
         </div>
@@ -136,7 +136,7 @@
             The integrated index can for example be used for prognostic purposes or provide a single value quantification of drug effects for dosage studies. By combining multiple biomarkers into a single index we achieve a higher statistical power compared to a single biomarker based analysis (see Figure, simulated data).
             </p>
             <ol start="5" class="refs">
-              <li>Poil et al. (2013). Integrative EEG biomarkers predict progression to Alzheimer's disease at the MCI stage. Frontiers Aging Neuroscience 5:58.</li>
+              <li><a href="http://journal.frontiersin.org/article/10.3389/fnagi.2013.00058/full" target=_blank>Poil et al. (2013). Integrative EEG biomarkers predict progression to Alzheimer's disease at the MCI stage. Frontiers Aging Neuroscience 5:58.</a></li>
             </ol>
           </div>
           <div class="col-md-6">
