--- a/index.html
+++ b/index.html
@@ -56,12 +56,11 @@
         <div class="row">
           <div class="col-md-6">
             <img class="img-responsive" src="img/logo.png"/> 
-            <div align="center">Intergrating Knowledge</div>
             <h1 class="title">
-              Understand brain activity better.
+              Intergrating Knowledge
             </h1>
             <p class="h1-title-sub">
-              NBT Analytics provides valuable insights on how drugs influcence the brain.
+              Understand brain activity better. NBT Analytics provides valuable insights on how drugs influcence the brain.
             </p>
             <p><a class="btn btn-primary btn-lg"  href="#services" role="button">Learn more</a></p>
           </div>
