--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <div class="col-md-6">
             <img class="img-responsive" src="img/logo.png"/> 
             <h1 class="title">
-              Intergrating Knowledge
+              Integrating Knowledge
             </h1>
             <p class="h1-title-sub">
               Understand brain activity better. NBT Analytics provides valuable insights on how drugs influcence the brain.
