--- a/index.html
+++ b/index.html
@@ -24,8 +24,16 @@
   ga('create', 'UA-71829758-1', 'auto',{'siteSpeedSampleRate': 100});
   ga('send', 'pageview');
 </script>
-<link rel="shortcut icon" href="/lib/tpl/arctic/images/nbtfavicon.ico"/>
 <!-- end Google Analytics tag -->
+<link rel="shortcut icon" href="/favicon.ico"/>
+    <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "Organization",
+      "url": "http://www.nbt-analytics.com",
+      "logo": "http://www.nbt-analytics.com/img/logo.png"
+    }
+    </script>
   </head>
   <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
