--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     {
       "@context": "http://schema.org",
       "@type": "Organization",
+      "name" : "NBT Analytics"
       "url": "http://www.nbt-analytics.com",
       "logo": "http://www.nbt-analytics.com/img/logo.png"
     }
