--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     
     <title>EEG analysis for CNS drug development and clinical trials | NBT Analytics</title>
-    <META NAME="Description" CONTENT="Understand brain activity better">
+    <META NAME="Description" CONTENT="Integrating knowledge, classifying brain scans">
     <meta property="fb:admins" content="710920251" />
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
