--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
           <div class="col-md-6">
             <img class="img-responsive" src="img/logo.png"/> 
             <h1 class="title">
-              Integrating Knowledge
+              Integrating knowledge, classifying brain scans
             </h1>
             <p class="h1-title-sub">
-              Understand brain activity better. NBT Analytics provides valuable insights on how drugs influcence the brain.
+              
             </p>
             <p><a class="btn btn-primary btn-lg"  href="#services" role="button">Learn more</a></p>
           </div>
