--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               
             </h1>
             <p class="h1-title-sub">
-              Integrating knowledge, classifying brain scans
+              Integrating knowledge, classifying brain states
             </p>
             <p><a class="btn btn-primary btn-lg"  href="#services" role="button">Learn more</a></p>
           </div>
