open graph tagging

--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
       "logo": "http://www.nbt-analytics.com/img/logo.png"
     }
     </script>
+<!-- tagging for social media -->
+<meta property="og:locale" content="en_US" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="EEG analysis for CNS drug development and clinical trials | NBT Analytics" />
+<meta property="og:description" content="Integrating knowledge, classifying brain scans" />
+<meta property="og:url" content="http://www.nbt-analytics.com/" />
+<meta property="og:site_name" content="NBT Analytics" />
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:site" content="@nbtanalytics" />
+<meta name="twitter:title" content="EEG analysis for CNS drug development and clinical trials | NBT Analytics" />
+<meta name="twitter:description" content="Integrating knowledge, classifying brain scans" />
+<meta name="twitter:image" content="http://www.nbt-analytics.com/img/logo.png" />  
   </head>
   <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
