--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 <noscript>
 <link href="compiled.min.css" rel="stylesheet">
 </noscript> -->
-<link href="css/boostrap.min.css" rel="stylesheet">
+<link href="bootstrap/css/boostrap.min.css" rel="stylesheet">
     <a href="https://plus.google.com/110309870351784054922" rel="publisher"></a>
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=poilss" async="async"></script>
   </body>
