--- a/index.html
+++ b/index.html
@@ -47,6 +47,20 @@
 <meta name="twitter:title" content="EEG analysis for CNS drug development and clinical trials | NBT Analytics">
 <meta name="twitter:description" content="Integrating knowledge, classifying brain scans">
 <meta name="twitter:image" content="http://www.nbt-analytics.com/img/logo.png">  
+<!-- Facebook Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
+n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,
+document,'script','//connect.facebook.net/en_US/fbevents.js');
+
+fbq('init', '501661866607121');
+fbq('track', "PageView");</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Facebook Pixel Code -->
   </head>
   <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
