--- a/index.html
+++ b/index.html
@@ -295,10 +295,24 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw==" crossorigin="anonymous">
 <link href="styles.css" rel="stylesheet">
 </noscript>
-
-    <!-- NBT Analytics styling -->
-    
     <a href="https://plus.google.com/110309870351784054922" rel="publisher"></a>
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=poilss" async="async"></script>
+    <!-- Google Code for NBTAnalytics -->
+<!-- Remarketing tags  -->
+<script type="text/javascript">
+/* <![CDATA[ */
+var google_conversion_id = 1051244920;
+var google_conversion_label = "YbPCCI6ZtgoQ-PKi9QM";
+var google_custom_params = window.google_tag_params;
+var google_remarketing_only = true;
+/* ]]> */
+</script>
+<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
+</script>
+<noscript>
+<div style="display:inline;">
+<img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/1051244920/?value=1.00&amp;currency_code=DKK&amp;label=YbPCCI6ZtgoQ-PKi9QM&amp;guid=ON&amp;script=0"/>
+</div>
+</noscript>
   </body>
 </html>
