adding ld-json organization data

--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
       "name" : "NBT Analytics",
       "url": "http://www.nbt-analytics.com",
       "logo": "http://www.nbt-analytics.com/img/logo.png"
+      "sameAs" : [
+        "https://twitter.com/nbtanalytics",
+        "https://www.facebook.com/nbtanalytics",
+        "https://www.linkedin.com/company/nbt-analytics",
+        "https://plus.google.com/+nbt-analytics",
+        "https://github.com/NBT-Analytics"
+        ]
     }
     </script>
 <!-- tagging for social media -->
