--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       "@type": "Organization",
       "name" : "NBT Analytics",
       "url": "http://www.nbt-analytics.com",
-      "logo": "http://www.nbt-analytics.com/img/logo.png"
+      "logo": "http://www.nbt-analytics.com/img/logo.png",
       "sameAs" : [
         "https://twitter.com/nbtanalytics",
         "https://www.facebook.com/nbtanalytics",
