--- a/index.html
+++ b/index.html
@@ -231,6 +231,14 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
             <div class="person">
               <img src="img/head-thumbs-x.png">
               <div class="profile">
+                <div class="name">Menno Noorlander</div>
+                <div class="position">Sales and marketing</div>
+                <div class="bg">...</div>
+              </div>
+            </div>
+            <div class="person">
+              <img src="img/head-thumbs-x.png">
+              <div class="profile">
                 <div class="name">Sonja Simpraga</div>
                 <div class="position">Scientific Developer</div>
                 <div class="bg">...</div>
