Some minor edits

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     
     <title>EEG analysis for CNS drug development and clinical trials | NBT Analytics</title>
-    <meta name="Description" content="Integrating knowledge, classifying brain scans">
+    <meta name="Description" content="NBT Analytics provides valuable insights on how drugs influcence the brain.">
     <meta property="fb:admins" content="710920251">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -46,13 +46,13 @@
 <meta property="og:locale" content="en_US">
 <meta property="og:type" content="website">
 <meta property="og:title" content="EEG analysis for CNS drug development and clinical trials | NBT Analytics">
-<meta property="og:description" content="Integrating knowledge, classifying brain scans">
+<meta property="og:description" content="NBT Analytics provides valuable insights on how drugs influcence the brain.">
 <meta property="og:url" content="http://www.nbt-analytics.com/">
 <meta property="og:site_name" content="NBT Analytics">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@nbtanalytics">
 <meta name="twitter:title" content="EEG analysis for CNS drug development and clinical trials | NBT Analytics">
-<meta name="twitter:description" content="Integrating knowledge, classifying brain scans">
+<meta name="twitter:description" content="NBT Analytics provides valuable insights on how drugs influcence the brain.">
 <meta name="twitter:image" content="http://www.nbt-analytics.com/img/logo.png">  
 <!-- Facebook Pixel Code -->
 <script>
@@ -119,10 +119,10 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
               Comprehensive mapping of drug-induced neurophysiological changes in brain activity.
             </h2>
             <p>
-              NBT Analytics provides detailed neuroimaging insights for CNS drug development through state-of-the-art electroencephalography (EEG) analysis. 
+              NBT Analytics provides detailed insights for CNS drug development through state-of-the-art electroencephalography (EEG) analysis. 
             </p>
             <p>
-              Our services for clinical trials are based on an EEG analysis pipeline developed at the VU University Amsterdam, which provides a comprehensive selection of neurophysiological biomarkers and uses machine-learning algorithms to identify highly sensitive indices of drug-induced changes in brain activity. 
+              Our neuroimaging services for clinical trials are based on an EEG analysis pipeline developed at the VU University Amsterdam, which provides a comprehensive selection of neurophysiological biomarkers and uses machine-learning algorithms to identify highly sensitive indices of drug-induced changes in brain activity. 
             </p>
              Want to learn more? <br> Contact us at <a href="mailto:info@nbt-analytics.com">info@nbt-analytics.com</a>
             <p></p>
@@ -152,7 +152,7 @@ src="https://www.facebook.com/tr?id=501661866607121&ev=PageView&noscript=1"
             <h2>Secondary endpoints for clinical trials</h2>
             <p> Electroencephalography (EEG) is a non-invasive, inexpensive and broadly available neuroimaging method that measures neurophysiological changes. The EEG is information rich and may give valuable insights on how a drug affects brain. EEG biomarkers, therefore, have great potential as secondary endpoints in clinical trials.</p>
             <p>We provide analysis based on a comprehensive selection of EEG biomarkers in the temporal, spatial, and spectral domains. By mapping multiple EEG biomarkers we obtain a detailed overview of drug induced neurophysiological changes, that further can be integrated into highly sensitive indices (see below).</p>
-            <p>The EEG is particularly sensitive to alterations in the excitatory/inhibitory balance, which is compromised in several neuropsychiatric disorders <sup>1</sup>. We have developed novel biomarkers that are sensitive to modulations of the excitatory/inhibitory balance and predict an important role of these biomarkers for understanding drug effects in humans<sup>2,3,4</sup>. One of these biomarkers is the oscillation burst duration biomarker, which has shown great sensitivity to a Alzheimer’s disease <sup>2</sup>(see Figure)</p>
+            <p>The EEG is particularly sensitive to alterations in the excitatory/inhibitory balance, which is compromised in several neuropsychiatric disorders<sup>1</sup>. We have developed novel biomarkers that are sensitive to modulations of the excitatory/inhibitory balance and predict an important role of these biomarkers for understanding drug effects in humans<sup>2,3,4</sup>. One of these biomarkers is the oscillation burst duration biomarker, which has shown great sensitivity to a Alzheimer’s disease<sup>2</sup> (see Figure)</p>
             <ol class="refs">
               <li><a href="http://journal.frontiersin.org/article/10.3389/neuro.02.002.2008/full" target="_blank">Eichler and Meier (2008). E-I balance and human diseases - from molecules to networking. Frontiers of Molecular Neuroscience 1:2. </a></li>
               <li><a href="http://www.pnas.org/content/106/5/1614.full" target="_blank">Montez et al. (2009). Altered temporal correlations in parietal alpha and prefrontal theta oscillations in early-stage Alzheimer disease. PNAS, 106(5): 1614–1619</a></li>
